# MLG382-Project1

./: README.md
MLG382 Guided Project/Code/snare-main/: README.md  pyproject.toml
MLG382 Guided Project/Code/snare-main/Data/: Cleaned_Student_Performance_data.csv  Transformed_Student_Performence_Data.csv
MLG382 Guided Project/Code/snare-main/NoteBook/: Bivariate_Analysis.ipynb  Deep_Learning_Model.ipynb  Feature_Engineering.ipynb  Logistical Regression.ipynb  RandomForestNotebook.ipynb  UnivariateAnalysis.ipynb  xgboost.ipynb
MLG382 Guided Project/Code/snare-main/src/: coral.h5  snare.py
MLG382 Guided Project/Code/snare-main/src/assets/: styles.css
MLG382 Guided Project/Code/snare-main/src/helpers/: evaluate_grade.py
MLG382 Guided Project/Code/snare-main/src/pages/: page_404.py  page_analysis.py  page_main.py
