[project]
name = "snare"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cykreet", email = "cykreet@gmail.com" },
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.poetry.dependencies]
numpy = "2.1.3"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
pip = "^25.0.1"
dash = "^3.0.2"
openpyxl = "^3.1.5"
statsmodels = "^0.14.4"
dash-bootstrap-components = "^2.0.1"
ruff = "^0.11.5"
xgboost = "^3.0.0"
nbformat = "^5.10.4"
seaborn = "^0.13.2"
tensorflow = "^2.19.0"
scikit-optimize = "^0.10.2"
mord = "^0.7"
imblearn = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snare"
version = "0.1.0"
description = "Add your description here"
authors = ["cyreet"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.hatch.metadata]
allow-direct-references = true
